--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "email-validate",
+  "name": "@burak101/email-validate",
   "version": "1.0.0",
   "main": "index.js",
   "description": "",
